--- a/cluster/base/cluster-secrets.yaml
+++ b/cluster/base/cluster-secrets.yaml
@@ -5,55 +5,55 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:MIl6Yd3m85hYuw==,iv:N3l6tzaKPS+lp59oJ9MCeYOREdKWwbN3lAgJkcy5nKs=,tag:+6lgoE3znAZ8OUICMVPC1A==,type:str]
-    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:DfZl2Qr6ABTScsAmSPOsrDQ49cpq,iv:zApGVAzwL3gmrjhT5d4+hNSNVPjeEr0wVuDMSLyOCg4=,tag:9/BuK1dw8YkX1E41zP4gPw==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:XQ1MnqDvv75hQQ==,iv:b+Xgt1Zgg2vd0MBMBnH3Kiv7Q/bL/a9fS3GcGpZ1T1s=,tag:/76S8MGs5h7gYo8fzcswyQ==,type:str]
+    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:xC8yfivMk/O6m98kz0sXYCLdu5YF,iv:wxSZfQC4aBHNZmUHE8HQI8da/rwThK0KzIZX0NCtfgU=,tag:swa199hwSBXo5EAMJ7Gi/g==,type:str]
 sops:
     kms: []
     gcp_kms: []
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2021-04-18T09:57:52Z"
-    mac: ENC[AES256_GCM,data:Iz7IPtOnHuoTsUZ+L7FhPMtTQdAX+IuH4RdAZinSONG6FWgcrgW4gAmXvJnhYQSV3IJBHgKGwv6ZrWqxnQ8JjQa5HjMAx8UqcrTS+Yz2q/dtBGM82uvLMVq6Dyt+pyDYjHxKq4ur1fAg4j64bN8u9KxGWbmddIE+BaGSIpUEjoo=,iv:0zfTLnfD5ewXI1M85rPFW8q3PXVmwfBxt5/QegDkgfA=,tag:F3qTC14DIwBdQ43MFpFjJg==,type:str]
+    lastmodified: "2021-04-18T11:05:00Z"
+    mac: ENC[AES256_GCM,data:1uBT3fcuD8wL8gwuzQa/8TIczSGlmcaInk9hzFBqxC76XqEsTpQ6Iwv2YzKnv5211f6AUAFjyO+wh4w/01w8ToZmMwMexrS0X9xqpjmtwXS9OGJd6Q2zZmGxMnbQ/7535mhevp4IF3sIGiQeWA1wErv7cyTyrV+5BPurBq915hg=,iv:xtnKp7jLQJp31jt8j28lv9rNh/EuwGqtM3Ub5nDZcBg=,tag:fYkqSagcoiEqzQGOCDElug==,type:str]
     pgp:
-        - created_at: "2021-04-18T09:57:52Z"
+        - created_at: "2021-04-18T11:04:59Z"
           enc: |
             -----BEGIN PGP MESSAGE-----
 
-            hQIMA4WRWoUERom4AQ/+K3HDb9CFRuhWBKwkWIW0nD8d8UofLFK66Y5IKu+uy9eJ
-            z2O4W3SYMcgCGTWha5N3OKZvE7MVfV0yYOERZludArU/ZZ6FJGArkPhDqDjXR1RD
-            rvxfADCQKnv0DwjzsQ3M07r5FppnnrUoVy2vjQRBNKShswCOWnoX5Ydksa4qIlov
-            ov3K68AbZ5lfx4Ww9JtnpA2wMJWmoRDWw9UcTpnU2lTPXq48R+wN9MFm8yl75gOW
-            q5/Cuy91qx5I/xPdYLLUXsvwoht+5kc8/eeD0dS3pDxGeLO8ifUgyZ8S5JSoFlZa
-            hqHIcWZRtdtPIyKLOiS0HTcqnj79Ol7dzaNefCEn/ckszX9AA5w/3xm6oYMuLSDW
-            OAHFgAQkJ1RvwUeSInVi2ciTaSD3g0P3pbHaZtzZgT0+BtFND4crq0BAUpdBrfu+
-            Zg+B0Dh3dGKNmBsTYlX/cc2A/EmAdV/RKupvBTCJ7xJQjed0JH7m7w/hkqbe4moV
-            HSzE6HjWbLhHyUXXIVHsr2xHOhHWqcZxR3NSipGV8daAFpWbqvikT13wPw70M6EL
-            tUIuw3Usm5r1rjXj/ISkiKSd4K0O59NcMd/LrAmi8TJsmZw27Y2vjyiien9yGfgE
-            CLjq47ZBKlLjfjhfzha8jy0BzytLovqTHZPn+A6OehFxMj0I2aUMpSeYaKfQSzLS
-            XgFWdo+4a4r8RKjlNCBFwUVEhISsQSiHmKWnAYbJvU/Bm4/wTM8L7ti4BAOB2bU8
-            2/7x4dUVhPCMSBkF30ZIvtDSOV1NefQNp6pS8Hl4nEM2nbW+ksbouwteezNNRww=
-            =x5H8
+            hQIMA4WRWoUERom4ARAAhAUOrrEve+q6EFsMpY0082GOcr9lKV6Qs3p0sYGXFLkW
+            vMnSAu+N0LUAiclJ0/TR/t7lHLGh6k33yZ8jmhdk6KxhC030+1zJUEB3Gbxt/tF9
+            Dq9pc8xv/q6ofYDoWZEMzRKE1ZwoV/zF5cw5C2fJSyQNEJL97G0xf5ZUuZNpzGjl
+            bixFpo4hOYWhQqRKRA4eqSCWUgxJ1j5ghLm/W11T3RvMTHtn1x9ZIn5NYNJNIrty
+            vWx+jIoQ57lcBfpYMW2yQYAq7JpFvTInJO9c/xt/eABjRwuwP2xJ5yeXpTUychhw
+            q9uQcj3a6GkTjLYoxtnXYSEeKCYrMKk8eRKxyIilAGBl4Y6g8ur+q1YGH4HIf6ol
+            Iobmd91BTjLbWCzwRIeCDS6i+NXM1567hSzkf4EL2Gkkw+qGQRuMtPgQl7ahF/0B
+            W5Rwi2BQv9LS93tDD3UF9iCCelm74wqviRkID+U4ALIsDTBCdGDGr8BrJJfn7A7u
+            pY4RP2jzomTQR8F/BxIQPjoalbZLOu5L1wqRo4WHqnCf+AI+kgLPZrL7Icl9UKE9
+            Dzfga/8xXnEKy6PER8DYOKWjBmB5kmSSwHEm2uzDZuwM77//FOxDUUDBr1nVcGpP
+            Ot5SIn2zJ+c6k1p2Lvmw1lTZ/sRLuT/yRFRJEaXao/3Ulqm5CQ9XGAjoybFi/8/S
+            XgHu5DLQKZ1TXRh/3OBR3pLIQKKHDx+axoGBUu0Dtiw7RLcOwiiRj6ikq2WWbVOA
+            2AQ6FgdGmjkCbtxXaTSVYr2vYlQTSKC8fxNRv07ThrL1TYrw7LSLONpGr4JKpws=
+            =eVVd
             -----END PGP MESSAGE-----
           fp: 5BA097218CB12A018E3442D718409871074EBB3A
-        - created_at: "2021-04-18T09:57:52Z"
+        - created_at: "2021-04-18T11:04:59Z"
           enc: |
             -----BEGIN PGP MESSAGE-----
 
-            hQIMA1LKhpQBWgcdARAAtRmLC5TNznEO5/2gDUwFqWToJV84oZCWhilvFjOe1lDY
-            q6bgTdCrdIp6cWH94KMvocr4SCa64p8NinwehWWbbthTqTk0JOhz3kZ6re/tRelY
-            YWhn/UhAUHGIL7lQoWUnS+GSmzj5cKlF9vt+L/ZszeziOom/8LysOxLeIG22xUSP
-            K7Gwgp07Sjbl7mtumpbD4RbisPuxGU0KO8d1Xwwp/qK8TrPJlUK8nAl2RtjL03+8
-            JXi/eG0igywST1YyclbmX/Dd3hUifbUsA/AgQTt+jhTNhhdWY+iCp7DD7REl1Hm1
-            ql4tujvr0n+6gGK8Qx5nzE/PHsc5p2D4H3YBPUtj7X15E1u/rFetl/W54l9Sa2tH
-            SY+trv1lsjvVEcm2LZb4IPLAXyawETBoEfoSo9ZOlxJLAZrjeaCKIU7A4iTUQsED
-            pBxytnfzJp7HjwPlsK5j6pQ5ewyJhVYjFH/U8iHA7PJbC0Y1Q2WIyet9W19pOBsH
-            Xmo5rXE2IhcFrRaRaVUkOVvPxOuCCoL3LMOPWV5qLIpY8zN+yr98gOilX61YOEXo
-            67WpPhM3I/4JufWLzhDjLJVMXID1QzQeWoR3ilOReN/GxOMFclyGO+XWuLOt/6pY
-            Tf4BFuvmD1PEUs6M5ybHQM+hxJTVyR/QkFn+4RtC8VLwBYBKnYpP1r33uydysdLS
-            XgFkN8cd2eKfidD3vno5r4X5VrhE92D+aXTwVWLo7ir9x1xg6U6aeUAgezCpovTV
-            f2+/25Q4UlY0JYlxBqbjjtn89VjtZIyNsDVPO74Enley59PmZY7qhFMi5WV92bA=
-            =c37c
+            hQIMA1LKhpQBWgcdAQ/+JJTtoOesS+AFzg1TaAmxHckfTkIG6sR8fPx3YhQSktRZ
+            eMF+FO0tBoqeB9dN2jY/F74zZQFEkrmsHGDt7Ww/ZQDBSDzvCbfFMiVkFh6my2Dg
+            lrrQM/4Ny+UZ0p77Z+BM47NHuTlE+PMg1MfElIHngf3wa3kpT8VuU42uc33MFyQ1
+            M4KjR1cRVV5jcQB+D/cmjRyc56LQPK7w8QVAnlsLSNaXunWD6nfkgxmEVMUMUfkP
+            SdRhL0WkBv/0Nqaq7skCVsc0B8T7ac+OCFlJSfmXIaSRoxnfzyIeNoS7Xz6UNhWn
+            +4YKbA7MQB6fJox2kAt2wswRkyzv7/8LJYnSdAc35EScpKho04CWf+EhJD1ysIpW
+            8oIU5Uz9nS9i8R146twR3Ufkzb9MYjsRX5oC1F65qmljrZCNFWPWlyFX1kKWjLZx
+            RZNKC/N1oPmFXg4LQbxQh86TvkBA6ExjckiVzQbez/niF3Nv2KNFR0ewOdzB81A1
+            HDVOSetv9g+UHR9YoP0HwZpeyKHeLB6F218YpEU6cF4jgy54GQvQGzyrYHJliHXY
+            2Ewa3DyHWOngI5Nc/twwtgv4KOM7KlhyPqGoxtDFQtaDLDZ3CrCgRPRltOjD6u7E
+            Ph74rGhg7K9sFD6wWLPNpeZNP0eQEwEMR+JYc/B+i9vRfST6zgLQi16aCPsNVSLS
+            XgFN1ahR7H4QOcwSi5k7/LKOZhygfQMMKhxa1NfnRjkJGeJeA906pxxnzW+1dzsC
+            T/w9rOe5Nd4k5WjLOWykFRJELmny62a/RDd4GNWWNkt9sylz6njouKXOyL70o9o=
+            =EI8i
             -----END PGP MESSAGE-----
           fp: F4770D410A8FB726A60413DCCBE6BAC6E781CA4B
     encrypted_regex: ^(data|stringData)$
