--- a/cluster/core/cert-manager/secret.enc.yaml
+++ b/cluster/core/cert-manager/secret.enc.yaml
@@ -5,54 +5,54 @@ metadata:
     name: cloudflare-token-secret
     namespace: cert-manager
 stringData:
-    cloudflare-token: ENC[AES256_GCM,data:ZWeHQ7ZZTpidiHLD1JLpjApTW2kBqaAfUsD5R15u9i3o4trE9f/J1A==,iv:UuKIORTVhRU1eWRmN7tmf02JP+FLd2AIADHB0yh9p1k=,tag:BO932iN6Gj53shPRNhhVtg==,type:str]
+    cloudflare-token: ENC[AES256_GCM,data:M1oQdewdhZsM409mwF40tm33owQMTCICmRkBZkp7tdXov1bW1OV5Pw==,iv:Q8h2dV3WKIPnZVnsnT92qXrtX7o7ZZBVBXzXznIxPEM=,tag:u+7JM2Pxc608RVwBCJnMHw==,type:str]
 sops:
     kms: []
     gcp_kms: []
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2021-04-18T09:57:53Z"
-    mac: ENC[AES256_GCM,data:zbeiq0LUSs/WZPcWLFZghMhMmoH7NeinO8L+SqmUD6kfbD90Zw7bMMIWeJrmMsYcMqsPaTcorxDPK2eiv52UOx+Rt8qVYsMWoHZ86hIq0r9UyGpIv2VUgNDwvD7Gy25NRZt0CfVpt0DNPIAb4WsLA4yLPqgtpWZKqWSHgwlfCL0=,iv:5rUIihYHE/VAoNNtfFEB1ADSKGhXxMAfTNEGBn3FT9U=,tag:xIPOpVXrdSMd/tVwYCW2nw==,type:str]
+    lastmodified: "2021-04-18T11:05:01Z"
+    mac: ENC[AES256_GCM,data:euSfw4oVxLlpNJl0ARsGZMlBZzSaPkoARD6Yead+LUuTv7cyioPfRFGxP/dC8D+wWWpG6qzvMPsQAovvwzT1WweJHO1s/nymjpDYpigmUxELC42x7AI1l+foPt3KdMhlNmApUUSLjbiwx/HV3GY0AruJ/8CpTp50in/cKJfq/go=,iv:1+PHPPB/WNxInRilLpEQVfow0q7k6tHkOdcZQiGpgp4=,tag:rOuFL3wXL+q/S6e+1SZLpw==,type:str]
     pgp:
-        - created_at: "2021-04-18T09:57:52Z"
+        - created_at: "2021-04-18T11:05:00Z"
           enc: |
             -----BEGIN PGP MESSAGE-----
 
-            hQIMA4WRWoUERom4AQ//TO7U6VRt2wNUrInaCweNzqcrVWbEpHQo+KHdSAOpLNCd
-            k0acpvHAf7LTWnc4JkZueLzhISHWdUzuyC/F0yXpL9RykeafgalhzLOiDsRVRqxY
-            3Wx24SV3BadhJbUXLh8rkl5+K++dRWo622bAsKQn5s0vXzITkrnhTn74Yb1a4lCw
-            LEYdRiNo4IUM6FdjZCf3CAqXxg5XNTu75qVV1L1l/VbE3V2DHKXH1p2PpwjtkFMf
-            Boy2ObYgB8JMDIftXgdRr/mY3ih4ByEFq+arWEOjPHnSzNQFaCxEjymLXiUGq0LW
-            ND0NpW5Ckd3QaBm4LScM6xy2eSQfAroEZfUQY9siYnY44urguzPB0dwms088TgzI
-            LdnzV9GMOsHVvRvwgA381CUMPnahd5EgDgGAdf8nADuGw1L/onWML1q1vCu4l8jf
-            jOmpbHCk5rHcccxX45p2JkpFr4ZjWxm17jwG7z0Jrh2RWos4y+hbkiS3JKhDNTMK
-            xJ9wOOI2B8DozX3845TYX29bwQ6sPWM9OMeedzAHxELVCRha+1OR8zAi9+lZ+Ny2
-            p42W0bx28oinXADkrQ1TT7p1z258IkD3/IeT5ifmGbH2KyAYMj6yC5+t+AOpUpNk
-            Lc2pDgecEl3xJIovcCEwHhpGa45+VCmftFaRbK9D0A/1OJhsqgO2K++50uY487HS
-            XgEsOTg286OX+Q8nSqBjjSL8GfpusmkaZ4KyEEd0cZ/ziR1q3Ae/3igeJDhrgJsf
-            ztL7zRoJewRtg8ojxWJXGiIurxb2lz1UYvQq/JlqiVz1YNWg5+5SnVPQSlyc7sk=
-            =w50S
+            hQIMA4WRWoUERom4AQ/7BmyiwugzCuuaejKN8G/VJi2D1CxnmW4yko2GK8Syk88d
+            GWAWWMuW9m4renerKwaSb9DHfZLq3tCwZg9z1TFyvIYx8TYgTgNpqt/AIXDrp7xd
+            C0rk5KxGgk2yEV4QmamULsADBlIgfBUdwAxizefQ3wMfrOeZOW17sIlvBPH3Ab3T
+            rRIVFvkgdCly7C4TK4TSORV9URKAT8CFW834hJJ3lQkuLEE18MLEaa8wn9NeUL2s
+            3IwpSfdhoTocRfFNnAPdOBZv8vOQX5vLB/1qnXBlb/atPwJ6SEBbEtwPqbR4/w5k
+            vVTcGuvpnoge/ImBc5ob1JlchMyyCAJT67rHIwg1j8Kj7pajyKPof4SRpOczZ37q
+            S9O1dYt0atZiJ5I8f3x7DqRKT3x43KQdylZYoZNKJM2yLHAQkhAi0h0wW7sU3wvr
+            s2NoIF0rV03hQkZ0ZdX0iFbotBcz1mjA/n98vBS1LU3U5YxOzuTAjyI8+Nm039wc
+            P9RzWFO0Slmf5aXa1HCck82fz6a2M7ydF8Tu6sYUDHGpP94zq8RadYIObj5eb2Xn
+            bS9o0pEU5CGZfFdOcfCnPYnF/c+9swGJvcDmJJAXGerHAur+CYcDcZjVieRz4i1S
+            xXywiHvLqA1i7XKgvfqOpA2lz/60rFvyIYLOv+bYDVT1v6B8RGnkCZj0XkrlQzHS
+            XAGn64ay3zYpKSA0+/WDCtpWP+JcglYnnghsOa8ikjKFHc4QzVuNoy3GObTIzWuc
+            aaXqflKfTTxjzHjzm9Vgbs7+itFbx9pGFp74favBM0U37Ds59BJ8srkXLfWI
+            =RLq8
             -----END PGP MESSAGE-----
           fp: 5BA097218CB12A018E3442D718409871074EBB3A
-        - created_at: "2021-04-18T09:57:52Z"
+        - created_at: "2021-04-18T11:05:00Z"
           enc: |
             -----BEGIN PGP MESSAGE-----
 
-            hQIMA1LKhpQBWgcdAQ/7Bv2s9qG9ZknOehiOhRrR9LvO8SedqGthjAR3SfQzHGqR
-            BM750o5JhaHCqeeT0JQL16TydQOlndt5r+n0yLYw4HfN/w6xN2Zbh5Tz+KhovtvU
-            nm4Z+ZS65SODT8ZvWwkh2l/HuH7FHur5pvRSC1igA2tg5qhZkA6P8kqAqzaYOtLX
-            m1d1e+WfViGS5/Lbj9CrjcV/PICtgxeSl5ZC8XY5qMTA0BffPkTfpN40DtdoqKIH
-            FmgE4srXMYsrOcjQfdRxYBYXLwi45iz4MCfafu4aPpAIDIknjrpqTAS3XwCNSbh+
-            fu8MY7Ze62QdwI7f0sA58qhy9YyPU8Pk0gn0QgfK3BcRTHOAhcCUU4oLFTQ1s5+G
-            Pb3AHyZ2whhZdztv4WmUP3nsyHpvUfAKjKxn5SpzlilrC8uRxgkiPrw5FPddi49j
-            MwNCKqbqB+tSLbMs4ZIAlWyDOQgJwxN82iUD4t7MQn2Q6bDK0zIHCP/mLP26fED8
-            awOz8eMhtO/aA6hGyQhYFmmTEF7MVPUspoQ50bRxoxqZfo9XYQnqd1M5QoORajHw
-            t7ZD6RKfNn1h1n/lxG/jIHPof9gPrGR2f737kCWJ82B0KepvMI5vyS9ONxXNJbyp
-            whUhJ3tSej4msRU0wwpWXPafDfqvXad7AAOQpjZ0NxfFOQoOgtaaV7YIOMe2lvbS
-            XgEPE2A6SsAWxmBnQHS+zwysGZTr94fWNNQv8NmbYcaN1saxJC7wb2vzPV0a6CND
-            i52Q0YhVvulnqIST+bzWwclNYuxdzgQv7yLDhCyM3TzkLN7mFTCTrbXjNwDiSC4=
-            =WgO7
+            hQIMA1LKhpQBWgcdAQ//QtPTiYd/VfAA08h9jFiv75Q38zCcUuCR1VczfeRgS7lb
+            /0arYggYaKPjZ9zWscbxHDNmsmAHrxV4vCl57/dSBeDTvkaBnmk3ZRSt4WrV3ZkT
+            mDKMfgJHa7wpRfe4QJhUZ6PJb2EPIUthD+DrTkvsiVm6UbJEECCcyXDnj5VAXvMF
+            NsB3C1xAXa7JQgA9hAzGXrL13Dk4BdaY2wnjCLpTfVz3MGmuWm0ENIHH4ybVG8Yy
+            7PHxS/JUX8VKinFX5DGmFgx/QShwvMXXjMZxTa7kqZvlTuAGXtb4NLABWZMGHKHf
+            hwU7aE+/YOPCQCz6eFwDo6y09Gqk0iR7Yop1w9UQUcPTQwyTvyj0Eq9ReAe20bIt
+            ObbWn2xummdtRgMrHAJK8z4JQu9EjikOcPOLYNhuZRu6x37QV2KWEUEi1Wb3fSPo
+            mbqNytcFfCQ9I4X1fmHcbps3dOAhZ96Utyhri1CvfH6zTY+xA4NaaKOqF6inOEh6
+            bLkvaPuKGoegdxx7zTb9EfX5lW3JQGod/SAwUhPYm7j8EuUXflqmt/c0gyYaxjKL
+            yTSBNKql/thb68aRpLQTl+Zk/YIaXTSbwI5T9IZlBN5kg2HKI5vDZsITj/t+cklv
+            3vj1+a5qtTJhLz64y5f1q4YJPmyujRNIGIdYDwThMnyf/jSAvYNUFdWBJJ+W8N3S
+            XAHUv6/CdqzOJOx1WbPPz9gLDKmPzASVxuJqL5cDVG4SXlrMc8Po5IP/fEGHDBtm
+            NWKPbNa3HGSH/J9Ld/EK8s53eOIHOm+vXMejh/jdhQ1jfEYww58mBWRA/aB7
+            =SMFP
             -----END PGP MESSAGE-----
           fp: F4770D410A8FB726A60413DCCBE6BAC6E781CA4B
     encrypted_regex: ^(data|stringData)$
