--- a/cluster/apps/networking/ingress-nginx/helm-release.yaml
+++ b/cluster/apps/networking/ingress-nginx/helm-release.yaml
@@ -5,7 +5,8 @@ metadata:
   name: ingress-nginx
   namespace: networking
 spec:
-  interval: 5m
+  interval: 15m
+  timeout: 30m
   chart:
     spec:
       # renovate: registryUrl=https://kubernetes.github.io/ingress-nginx
